# quantapi

./: CMakeLists.txt  README.md  index.html  params.json
demo/: CMakeLists.txt  ctp_demo.cpp  ctp_demo.h  demo.cpp  lts_demo.h
lib/windows/: thostmduserapi.lib
quantapi/: CMakeLists.txt  Quoter.h  TradeDataStruct.cpp  TradeDataStruct.h  Trader.h  TraderCallBackBase.h  datastruct.cpp  datastruct.h  mapping.cpp  mapping.h
quantapi/api/: QuoterCallBackBase.h  TradeDataStruct.h
quantapi/api/ctp/: CtpTrader.cpp  CtpTrader.h
quantapi/ctp/: CtpMapping.h  CtpQuoter.cpp  CtpQuoter.h  CtpQuoterCallBack.h  CtpTrader.cpp  CtpTrader.h  CtpTraderCallBack.h  ThostFtdcTraderApi.h
quantapi/gtafuture/: GTAMarketServiceApi.h  GTAMarketServiceApiStruct.h  GTAQTSInterface.h  GtaFutureQuoter.cpp  GtaFutureQuoter.h  OutputData.h  QutoSvrDefine.h
quantapi/gtastock/: CfxUdpStruct.h  GTAQTSInterfaceBase.h  GTAQTSInterfaceBaseC.h  GTAQTSInterfaceEx.h  GTAQTSInterfaceExC.h  GtaStockMapping.h  GtaStockQuoter.cpp  GtaStockQuoter.h  QTSDataFieldDefine.h  QTSDataType.h  QTSStruct.h
quantapi/lib/windows/: thosttraderapi.lib
quantapi/lts/: LtsMapping.h  LtsQuoter.cpp  LtsQuoter.h  LtsTrader.cpp  LtsTrader.h
quantapi/util/: CMakeLists.txt  Csv.cpp  Exceptions.cpp  Logger.cpp  ThreadPool.h  definition.cpp  definition.h  threadsafe_queue.h
util/: Csv.h  Exceptions.cpp  Exceptions.h  Functions.cpp  Functions.h  Logger.cpp  Logger.h  Singleton.h  ThreadPool.cpp  log_assert.cpp  log_assert.h  threadsafe_stack.h
