CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)


ADD_EXECUTABLE(ctp_demo
    demo.cpp
    )
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})


TARGET_LINK_LIBRARIES (ctp_demo
	${CTP_MD_LIB}
	${CTP_TRADER_LIB}
	${LTS_MD_LIB}
	${LTS_TRADER_LIB}
    util
    quantapi
    )

INSTALL (TARGETS ctp_demo
    DESTINATION "${BINARY_DIR}/")

