CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

FILE(GLOB source
    "*.cpp"
)

ADD_LIBRARY (util ${source})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/build/thirdparty")

IF (WIN32)
    ADD_DEFINITIONS(-DWIN32)
ENDIF()


INSTALL (TARGETS util
    #DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/")
    DESTINATION "${BINARY_DIR}/lib/")

